# codesearch

./: .codesearchignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  USE_CASES.md  WEB_UI_IMPLEMENTATION.md  docker-compose.yml  neurix.md  pyproject.toml  start-web-ui.sh
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py  benchmark_table.md  results.json  visualize.py
codesearch/: __init__.py  __main__.py  cli.py  config.py  log.py
codesearch/indexer/: __init__.py  fts.py  hasher.py  indexer.py  language.py  scanner.py
codesearch/indexer/symbols/: __init__.py  python_ast.py  treesitter_js.py
codesearch/query/: __init__.py  parser.py  ranker.py  search.py
codesearch/storage/: __init__.py  db.py  migrations.py  schema.sql
codesearch/utils/: snippets.py  text.py
codesearch/web/: __init__.py  api.py  server.py
codesearch/web/ui/: index.html
docs/: STRUCTURE.md  WEB_UI_GUIDE.md  architecture.md
examples/: README.md  basic_usage.py
examples/demo_data/: README.md
examples/demo_data/src/: utils.js
examples/demo_data/src/api/: routes.ts
examples/demo_data/src/services/: auth_service.py  health_service.py
scripts/: benchmark.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py  test_scanner.py
tests/integration/: __init__.py  test_incremental_indexing.py  test_indexing.py  test_js_symbol_indexing.py  test_search.py  test_symbol_search.py
tests/unit/: test_database.py  test_indexer.py  test_js_symbols.py  test_python_ast.py  test_query_parser.py  test_scanner.py
